<resources>
    <string name="app_name">RelHan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nav_news_ru">Новости</string>
    <string name="nav_news_kz">Жаңалықтар</string>
    <string name="nav_town_ru">Города</string>
    <string name="nav_town_kz">Қалалар</string>
    <string name="nav_find_ru">Пойск работы</string>
    <string name="nav_find_kz">Жұмыс іздеу</string>
    <string name="nav_favorite_ru">Избранные</string>
    <string name="nav_favorite_kz">Таңдаулылар</string>
    <string name="nav_contact_ru">Контакты</string>
    <string name="nav_contact_kz">Байланыс мәліметтері</string>
    <string name="nav_setting_ru">Настройки</string>
    <string name="nav_setting_kz">Параметрлер</string>
    <string name="nav_infoapp_ru">О приложении</string>
    <string name="nav_infoapp_kz">Бағдарлама түралы</string>
    <string name="nav_logout_ru">Выйти</string>
    <string name="nav_logout_kz">Шығу</string>
    <string name="Login_ru">Войти</string>
    <string name="Login_kz">Кіру</string>
    <string name="Authorize">Авторизация</string>
    <string name="Authorizesucces_ru">Авторизация прошла успешно</string>
    <string name="Authorizesucces_kz">Авторизация сәтті өтті</string>
    <string name="Authorizeonsucces_ru">Aвторизация провалена</string>
    <string name="Authorizeonsucces_kz">Aвторизация сәттсіз өтті</string>
    <string name="Register_ru">Зарегестироваться</string>
    <string name="Register_kz">Тіркелу</string>
    <string name="RegisBar">Регистрация</string>
    <string name="RegisterSucces_ru">Регистрация успешно</string>
    <string name="RegisterSucces_kz">Регистрация сәтті өтті</string>
    <string name="RegisterNotSucces_ru">Регистрация провалено</string>
    <string name="RegisterNotSucces_kz">Регистрация сәттсіз болды</string>
    <string name="checkEmailPassword_ru">Проверьте ваш пароль или email</string>
    <string name="checkEmailPassword_kz">Email немесе қүпия сөзді тексеріңіз</string>
    <string name="ErFileds_ru">Проверьте все поля</string>
    <string name="ErFileds_kz">Барлығы дұрыс толмады</string>
    <string name="DeletedAccount_ru">Ваш аккаунт удалён</string>
    <string name="DeletedAccount_kz">Аккаунтыз жойылған</string>
    <string name="LogoutAcount_ru">выйти с акаунта</string>
    <string name="LogoutAcount_kz">акаунтан шығу</string>
    <string name="Log_Name_ru">Имя</string>
    <string name="Log_Name_kz">Атыңыз</string>
    <string name="Email">Email</string>
    <string name="Password_ru">Пароль</string>
    <string name="Password_kz">Құпия сөз</string>
    <string name="Con_Password_ru">Потдтвердите пароль</string>
    <string name="Con_Password_kz">Құпия сөзді растаңыз</string>
    <string name="NoyAccount_ru">Нет Аккаунта?</string>
    <string name="NoyAccount_kz">Аккаунт жоқпа?</string>

    //Нужно хранить в string-array
    <string name="Uststr_ru">Усть-Каменогорск</string>
    <string name="Uststr_kz">Өскемен</string>
    <string name="Ustlink_ru">https://ru.wikipedia.org/wiki/Усть-Каменогорск</string>
    <string name="Ustlink_kz">https://kk.wikipedia.org/wiki/Өскемен</string>
    <string name="Semeistr_ru">Семипалатинск</string>
    <string name="Semeistr_kz">Семей</string>
    <string name="Semeilink_ru">https://ru.wikipedia.org/wiki/Семей</string>
    <string name="Semeilink_kz">https://kk.wikipedia.org/wiki/Семей</string>

    <string name="TownTabsInfo_ru">Город</string>
    <string name="TownTabsInfo_kz">Қала</string>
    <string name="TownTabsSoc_ru">Соц Объекты</string>
    <string name="TownTabsSoc_kz">Әлеуметтік нысандар</string>
    <string name="Schols_ru">Школы</string>
    <string name="Schols_kz">Мектептер</string>
    <string name="Kindergartens_ru">ДетСады</string>
    <string name="Kindergartens_kz">Балабақшалар</string>
    <string name="Hospitals_ru">Больницы</string>
    <string name="Hospitals_kz">Ауруханалар</string>

    <string name="SnackbarMapShowtext_ru">Показать на Карте ?</string>
    <string name="SnackbarMapShowtext_kz">Картадан көресізбе ?</string>

    <string name="street_ru">Адрес: </string>
    <string name="street_kz">Мекен-жайы: </string>

    <string name="freeplace_ru">Свободное место: </string>
    <string name="freeplace_kz">Бос орын: </string>

    <string name="doctor_ru">Главный врач: </string>
    <string name="doctor_kz">Бас дәрігер: </string>

    <string name="txvfind_ru">Что ищем?</string>
    <string name="txvfind_kz">Нены ыздеп отырсыз?</string>

    <string name="txvtown_ru">Выберите город?</string>
    <string name="txvtown_kz">Қаланы  таңданыз?</string>

    <string name="txvtype_ru">Сфера работы:</string>
    <string name="txvtype_kz">Қызмет саласы:</string>

    <string name="txvsalary_ru">Зарплата</string>
    <string name="txvsalary_kz">Еңбекақы</string>

    <string name="txvsalary2_ru">от</string>
    <string name="txvsalary2_kz">бастап:</string>

    <string name="txvsort_ru">Сортировка</string>
    <string name="txvsort_kz">Сұрыптау</string>

    <string name="btnfind_ru">Найти</string>
    <string name="btnfind_kz">Табу</string>



    <string name="txvconpeople_ru">Контакты для граждан:"</string>
    <string name="txvconpeople_kz">Азаматтарға арналған байланыс телефоны</string>

    <string name="txvconsoc_ru">Контакты по оказанию социальной помощи</string>
    <string name="txvconsoc_kz">Әлеуметтік көмек көрсету бойынша байланыс телефоны</string>


    <string name="setLang_ru">Язык</string>
    <string name="setLang_kz">Тіл</string>

    <string name="RU_text_ru">Русский</string>
    <string name="RU_text_kz">Казахский</string>
    <string name="KZ_text_ru">Орысша</string>
    <string name="KZ_text_kz">Қазақша</string>

    <string name="info_app_ru">Данная программа предназначена для ознакомления с городами ВКО и пойска работ в них</string>
    <string name="info_app_kz">Бұл бағдарлама ШҚО қалаларымен танысуға және сол қалалардан жұмыс табуға арналған</string>

    <string name="app_ver_ru">Версия 1.0</string>
    <string name="app_ver_kz">Нұсқа  1.0</string>





    <string name="title_activity_maps">Map</string>

</resources>
