<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:hint="@string/Email"
        android:layout_marginTop="50dp"
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/ed_email"
        android:drawableLeft="@drawable/locked"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/Password_ru"
        android:layout_marginTop="30dp"
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_round"
        android:textColor="@color/white"
        android:text="@string/Login_ru"
        android:layout_below="@id/ed_password"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20sp"
        android:text="@string/NoyAccount_ru"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"
        android:id="@+id/txv_noyaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>